// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal-title-buttons Renders \`modal-title-buttons\` with custom props 1`] = `
<div
  class="modal-title-buttons close minimize"
>
  <div
    class="modal-title-button__wrapper"
  >
    <span
      class="v-tooltip v-tooltip--left"
    >
      <transition-stub
        name="slide-x-reverse-transition"
      />
      <span>
        <button
          class="v-btn--minimize my-0 v-btn v-btn--disabled v-btn--icon theme--light"
          disabled="disabled"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light white--text"
              style="font-size: 36px;"
            >
              minimize
            </i>
          </div>
        </button>
      </span>
    </span>
  </div>
  <div
    class="modal-title-button__wrapper"
  >
    <button
      class="ma-0 v-btn v-btn--icon theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light white--text"
          style="font-size: 36px;"
        >
          close
        </i>
      </div>
    </button>
  </div>
</div>
`;

exports[`modal-title-buttons Renders \`modal-title-buttons\` with default props 1`] = `
<div
  class="modal-title-buttons"
>
  <!---->
  <!---->
</div>
`;

exports[`modal-title-buttons Renders \`modal-title-buttons\` with minimized modal 1`] = `
<div
  class="modal-title-buttons minimize"
>
  <div
    class="modal-title-button__wrapper"
  >
    <button
      class="my-0 v-btn v-btn--icon v-btn--small theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light white--text"
        >
          maximize
        </i>
      </div>
    </button>
  </div>
  <!---->
</div>
`;
